--- a/proj.html
+++ b/proj.html
@@ -98,14 +98,15 @@
             <div class="float-box">
                 <img src="C:\Users\Sanghdeep\Desktop\mini project\Screenshot 2025-11-15 112428.png" width="350px" height="300px"style="border-radius:20px">
                 <p>Snake Game</p>
-                <button><a href="C:\Users\Sanghdeep\Desktop\mini project\snake.html"  style="color: rgb(6, 6, 6); text-decoration: none;">Play!!!</a></button>
+                <button><a href="snake.html"  style="color: rgb(6, 6, 6); text-decoration: none;">Play!!!</a></button>
             </div>
             <div class="float-box">
                 <img src="Screenshot 2025-11-15 113547.png" width="350px" height="300px"style="border-radius:20px">
                 <p>Calculator</p>
-                <button><a href="C:\Users\Sanghdeep\Desktop\mini project\calculatar.html"  style="color: rgb(12, 12, 12); text-decoration: none;">Try it !!!</a></button>
+                <button><a href="calculatar.html"  style="color: rgb(12, 12, 12); text-decoration: none;">Try it !!!</a></button>
             </div>
             <div style="clear: both;"></div>
           </section>
         
+
     </body>
