--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 border-radius: 10px;
             }
             .profile{
-                background-image:url("C:/Users/Sanghdeep/Pictures/me.jpg");
+                background-image:url("me.jpg");
                 background-position:-250px;
                 background-position-y:-300px ;
                 width:400px;
@@ -88,7 +88,7 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\PROJECT.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="C:\Users\Sanghdeep\Desktop\mini project\index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
@@ -104,3 +104,4 @@
 
     </body>
 </html>
+
