--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\PROJECT.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="C:\Users\Sanghdeep\Desktop\mini project\index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT </a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
@@ -84,5 +84,6 @@
             <h1>Contact no-<a href=tel:91-7576565678>91-7576565678</a></h1> 
             <img src="C:\Users\Sanghdeep\Desktop\mini project\Screenshot 2025-11-15 130008.png" height="300px" width="600px" style="border-radius: 40px;">
         </footer> 
+
 
     </body>
