--- a/proj.html
+++ b/proj.html
@@ -85,7 +85,7 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\PROJECT.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="C:\Users\Sanghdeep\Desktop\mini project\index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;">MY PROJECTS </a>
             <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
@@ -110,3 +110,4 @@
         
 
     </body>
+
