--- a/ABOUT.html
+++ b/ABOUT.html
@@ -93,10 +93,10 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\PROJECT.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT </a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
+            <a href="index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
+            <a href="proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT </a>
+            <a href="contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
         </nav>
         <div class="about">
           <h1>ABOUT ME</h1>
@@ -118,4 +118,5 @@
                     <li>writing sci fi</li>
                 </ul>
         </div>
+
     </body>
