--- a/proj.html
+++ b/proj.html
@@ -85,10 +85,10 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;">MY PROJECTS </a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
+            <a href="index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
+            <a href="proj.html" class="link" style="color: azure;text-decoration: none;">MY PROJECTS </a>
+            <a href="contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
         </nav>
         <section class="float">
             <div class="float-box"><img src="Screenshot 2024-12-30 185044.png" width="350px" height="300px" style="border-radius:20px;">
@@ -110,4 +110,5 @@
         
 
     </body>
+
 
