--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <h1 class="heading">PORTFOLIO</h1>   
         </header>
         <nav>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT</a>
-            <a href="C:\Users\Sanghdeep\Desktop\mini project\contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
+            <a href="index.html" class="link" style="color: azure; text-decoration: none;">HOME</a>
+            <a href="ABOUT.html" class="link" style="color: azure;text-decoration: none;">ABOUT ME</a>
+            <a href="proj.html" class="link" style="color: azure;text-decoration: none;"> MY PROJECT</a>
+            <a href="contact.html" class="link" style="color: azure;text-decoration: none">CONTACT </a>
         </nav>
         <div class="profile">
         </div>
@@ -104,4 +104,5 @@
 
     </body>
 </html>
+
 
