--- a/proj.html
+++ b/proj.html
@@ -96,7 +96,7 @@
                <button><a href="PHARMACY PROJECT.py" style="color: rgb(2, 2, 2); text-decoration: none;" >CODE!!!</a></button>
             </div>
             <div class="float-box">
-                <img src="C:\Users\Sanghdeep\Desktop\mini project\Screenshot 2025-11-15 112428.png" width="350px" height="300px"style="border-radius:20px">
+                <img src="Screenshot 2025-11-15 112428.png" width="350px" height="300px"style="border-radius:20px">
                 <p>Snake Game</p>
                 <button><a href="snake.html"  style="color: rgb(6, 6, 6); text-decoration: none;">Play!!!</a></button>
             </div>
@@ -110,5 +110,6 @@
         
 
     </body>
+
 
 
