--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,10 @@
             <h1>Author: Sanghdeep Siddharth</h1> 
             <h1>Gmail-<a href="mailto:deepaney2697@gmail.com">deepaney2697@gmail.com</a></h1> 
             <h1>Contact no-<a href=tel:91-7576565678>91-7576565678</a></h1> 
-            <img src="C:\Users\Sanghdeep\Desktop\mini project\Screenshot 2025-11-15 130008.png" height="300px" width="600px" style="border-radius: 40px;">
+            <img src="Screenshot 2025-11-15 130008.png" height="300px" width="600px" style="border-radius: 40px;">
         </footer> 
 
 
     </body>
+
 
